--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head>
     <body>
         <h2>Home Page</h2>
-        <a hre="week03">Week 03</a> 
+        <a href="week03/index.html">Week 03</a> 
     </body>
 </html>
