--- a/week03/index.html
+++ b/week03/index.html
@@ -2,7 +2,7 @@
     <head>
     <body>
         <h2>Home Page</h2>
-        <a hre="week03">Week 03</a> 
+        <a href="week03">Week 03</a> 
         <p>blah blah</p>
     </body>
 </html>
