--- a/week03/index.html
+++ b/week03/index.html
@@ -1,7 +1,29 @@
 <html>
     <head>
-    <body>
-        <h2>Home Page</h2> 
-        <p>blah blah</p>
-    </body>
+        <title>Week 03 Response</title>
+    <body style="background: burlywood;">
+        <h1 style="text-align: center;font-size: left: 30px;ge;color: black;">Week 3 Response</h1> 
+        <h2 style="text-align: center;">
+         <img src="https://cdn.theatlantic.com/thumbor/ovZ0bLQevLmtpHdwg1EJm7rmx_U=/1x416:2999x2102/1440x810/media/img/2018/03/AP_413517775098/original.jpg" width="800px" title="absolute">
+         <p style="font-size: 20px;text-align: left;margin-left: 30%;margin-right: 30%;">Vannevar Bush was one of the greatest American scientists and engineers during World War II. In his paper "As We May Think"published in 1945, he proposed the concept of miniature photography and memex, 
+            which created the era of digital computers and search engines. In this paper, many theories proposed by Van Neva predict the development of computers after World War II to the present. 
+            Many pioneers in the computer field were inspired by this article. Later, computers such as mice and hypertext The creation of technology is based on this paper with theoretical era significance.
+            Basic research brings new knowledge and provides scientific ‘capital’. It has created a ‘science fund’ that enables practical application projects to gain a foothold.Basic research is the leader in technological development.
+            Memex, designed to help humans think and manage information, is a database system that stores and retrieves large amounts of information through electronic computers; this human brain-like machine can retrieve information according to the needs of users, 
+            and focuses on users and systems The interaction between. The system helps academic researchers to collect, combine, analyze and apply various data by establishing connection paths, searching, processing, and integrating technologies. In addition, 
+            Memex's design has the characteristics of reducing storage space, increasing retrieval speed, and expanding memory. This concept lays the foundation for the future development of personal computers,
+            information retrieval, hypertext, hypermedia, online public catalogs, global networks and digital libraries.</p>
+         <img src="Meaningful-Connectivity.jpg" width="800px" title="relative">
+         <p style="font-size: 20px;text-align: left;margin-left: 30%;margin-right: 30%;">Tim Berners-Lee is a computer scientist in the UK. He proposed an Internet-based hyperlink system that allows information sharing between different computers, and this idea has forever changed the way people communicate 
+            and use the Internet. This system was later known as the World Wide Web. Today, the global technological revolution spawned by hyperlinks has created an economic system on which thousands of companies depend. 
+            Thirty years after this system was created, half of the world's population is using the Internet, and there are nearly 2 billion websites on the Internet. This is due to Berners-Lee’s early realization that the true potential of the Internet will 
+            be released only when anyone can use it for free anywhere and without requiring permission. Berners-Lee said he had always known the potential problems of the Internet. After all, there are bad people in the masses, and these people can also make their 
+            way on the Internet and find their own world. He never expected that the Internet would be used by nations and nations to influence elections and public discourse. After the 2016 U.S. presidential election, he realized that “this is not just about spam, 
+            but the more serious problem is that people will believe in things that are manipulated by some clever and ulterior wicked people.” It was at this moment, He realized that he and the World Wide Web Foundation had to take a 
+            big step back and rethink the web.</p>
+        </h2>
+        <h3 style="text-align: center;font-size: 30px;">
+            <a href="../index.html" >Home Page
+        </body>
+ 
 </html>
