--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <body>
+    <body style="background: burlywood;">
         <h2>Home Page</h2>
         <a href="week03/index.html">Week 03</a> 
     </body>
