--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
     <head>
+        <title>Home Page</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
     <body style="background: burlywood;">
-        <h2>Home Page</h2>
-        <a href="week03/index.html">Week 03</a> 
+     <h1>Home Page</h1>   
+     <a href="week03/index.html">Week 03</a> 
+     <br></br>
+     <a href="week04/index.html">Week 04</a> 
+    
     </body>
 </html>
