--- a/week04/clients/clients.html
+++ b/week04/clients/clients.html
@@ -7,11 +7,17 @@
         <div class="fixed">
          <a href = "../index.html"><button>Home Page</button></a>
          <br></br>
-         <a href = "../bio/bio.html"><button>Biography</button></a>
+         <a href = "../bio/bio1.html"><button>Biography</button></a>
          <br></br>
          <a href = "CHANGE HERE"><button>Design Works</button></a>
          <br></br>
-         <a href = "clients.html"><button style="color: blue;">Clients</button></a>
+         <a href = "clients.html"><button style="color:grey">Clients</button></a>
+        </div> 
+        <h6 class="thePosition">Citation</h6>
+        <div class="thePosition">
+         <p>“David Carson: Biography, Designs and Facts.” Famous Graphic Designers, www.famousgraphicdesigners.org/david-carson. </p>
+         <p>magCulture. “Beach Culture, August/September 1990.” MagCulture, 14 Sept. 2018, magculture.com/beach-culture-augustseptember-1990/. </p>
+         <p>“Interview with Graphic Designer David Carson.” Designboom, 24 Sept. 2014, www.designboom.com/design/interview-with-graphic-designer-david-carson-09-22-2013/. </p>
         </div> 
     </body>
 </html>
