--- a/week04/clients/clients.html
+++ b/week04/clients/clients.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <div class="fixed">
-         <a href = "../index.html"><button>Home Page</button></a>
+         <a href = "../Homepage_designworks/homepage.html"><button>Home Page</button></a>
          <br></br>
          <a href = "../bio/bio1.html"><button>Biography</button></a>
          <br></br>
-         <a href = "CHANGE HERE"><button>Design Works</button></a>
+         <a href = "../Homepage_designworks/design_work.html"><button>Design Works</button></a>
          <br></br>
          <a href = "clients.html"><button style="color:grey">Clients</button></a>
         </div> 
