--- a/week04/clients/clients.html
+++ b/week04/clients/clients.html
@@ -11,7 +11,7 @@
          <br></br>
          <a href = "../Homepage_designworks/design_work.html"><button>Design Works</button></a>
          <br></br>
-         <a href = "clients.html"><button style="color:grey">Clients</button></a>
+         <a href = "clients.html"><button style="color:grey">Citation</button></a>
         </div> 
         <h6 class="thePosition">Citation</h6>
         <div class="thePosition">
