--- a/week04/Homepage_designworks/homepage.html
+++ b/week04/Homepage_designworks/homepage.html
@@ -14,7 +14,7 @@
          <br>
          <a href = "design_work.html"><button> Design Works</button></a>
          <br>
-         <a href = "../clients/clients.html"><button>Clients</button></a>
+         <a href = "../clients/clients.html"><button>Citation</button></a>
         </div> 
         <h2 class="thePosition">
             <img src="david-carson-lecture.jpeg" alt="david carson Photo" style="width: 70%;">
