--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
      <h1>Home Page</h1>   
      <a href="week03/index.html">Week 03</a> 
      <br></br>
-     <a href="week04/index.html">Week 04</a> 
+     <a href="week04/Homepage_designworks/homepage.html">Week 04</a> 
+
     
     </body>
 </html>
