--- a/week06 Web Art/p1.html
+++ b/week06 Web Art/p1.html
@@ -5,12 +5,14 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <div>
+    <div id="imagebox">
         <img src="download.jpg" class="images">
         <img src="Video-Glitch-Art-Guide-1.jpg" class="images">
         <img src="FINAL IMAGE-min.jpg" class="images">
         <img src="3285947_orig.jpg" class="images">
-        <img src="glitch-art.webp" class="images">
+    </div>
+    <div id="imagebox">
+    <img src="glitch-art.webp" class="images">
         <img src="images.jpg" class="images">
         <img src="il_570xN.1792955850_4899.jpg" class="images">
         <a href="index.html"><button>BACK</button></a>
