--- a/week07/Lakers/Champions/champions.html
+++ b/week07/Lakers/Champions/champions.html
@@ -5,12 +5,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
-    <h1 style="position: fixed;left: 20%;top:-25;z-index: 30;"><img src="../media/lakers.png" width="80px"></h1>
-    <div style="text-align: center;z-index:20"id="float_banner" >
+    <div style="text-align: center;z-index:20" class="float_banner" > 
+        <img style="margin-left: 10%;" src="../media/lakers.png"  width="5%">
         <a href="../homepage.html" >Home</a>
-        <a href="../Champions/champions.html">Championship</a>
-        <a href="../Hall of Famers/HOF.html">Hall of Famers</a>
+        <a href="champions.html">Championship</a>
+        <a href="../Hall of Famers/HOF.html">Retired Jersey</a>
         <a href="../Store/store.html">Store</a>
+     </div>
+     
+    <div class="sideLeft">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="media/prize.png" >
+    </div>
+  
+    <div class="sideRight">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="media/prize.png" >
     </div>
 
     <div id="champion">
@@ -19,12 +39,36 @@
         <img src="media/1952.jpg">
         <img src="media/1953.png">
     </div>
+
     <div id="champion">
         <img src="media/1954.jpg">
         <img src="media/1972.jpg">
         <img src="media/1980.jpg">
         <img src="media/1982.jpg">
-    </div>>
+    </div>
+
+    <div id="champion">
+        <img src="media/1985.jpg">
+        <img src="media/1987.jpg">
+        <img src="media/1988.jpg">
+        <img src="media/2000.jpg">
+    </div>
+
+    <div id="champion">
+        <img src="media/2001.jpg">
+        <img src="media/2002.jpg">
+        <img src="media/2009.jpg">
+        <img src="media/2010.jpg">
+    </div>
+
+    <div style="text-align: center;margin-top: 1.5%;">
+        <img src="media/2020.jpg" width="50%">
+    </div>
+
+    <div style="text-align: center;margin-top: 2%;margin-bottom: 1%;">
+        <b style="font-size: 130%;">Source from "All Things Lakers@New York Times'"</b>
+    </div>
+ 
  
 
 </html>
