--- a/week07/Lakers/homepage.html
+++ b/week07/Lakers/homepage.html
@@ -6,8 +6,11 @@
         
     </head>
     
-   <img src="media/banners.png" width="100%">
-   <div style="text-align: center;z-index:20" class="float_banner" > 
+    <div style="z-index: 10;">
+    <img src="media/banners.png" width="100%">
+    </div>
+
+   <div style="text-align: center;" class="float_banner" > 
         <img style="margin-left: 10%;" src="media/lakers.png"  width="5%">
         <a href="homepage.html" >Home</a>
         <a href="Champions/champions.html">Championship</a>
@@ -21,7 +24,7 @@
    </video>
    </div> 
 
-   <div class="sideLeft">
+   <div class="sideLeft" style="z-index: -10;">
       <img src="media/AD.jpg" >
       <br>
       <br>
@@ -32,7 +35,7 @@
       <img src="media/kobe1.jpg">
    </div>
 
-   <div class="sideRight">
+   <div class="sideRight" style="z-index: -10;">
       <img src="media/lbj.jpg" >
       <br>
       <br>
