--- a/week07/Lakers/Hall of Famers/HOF.html
+++ b/week07/Lakers/Hall of Famers/HOF.html
@@ -6,7 +6,7 @@
     </head>
 
     <div style="text-align: center;z-index:20" class="float_banner" > 
-        <img style="margin-left: 10%;" src="../media/lakers.png"  width="5%">
+        <img style="margin-left: 10%;;" src="../media/lakers.png"  width="5%">
         <a href="../homepage.html" >Home</a>
         <a href="../Champions/champions.html">Championship</a>
         <a href="HOF.html">Retired Jersey</a>
