--- a/week07/Lakers/homepage.html
+++ b/week07/Lakers/homepage.html
@@ -11,7 +11,6 @@
     </div>
 
    <div style="text-align: center;" class="float_banner" > 
-        <img style="margin-left: 10%;" src="media/lakers.png"  width="5%">
         <a href="homepage.html" >Home</a>
         <a href="Champions/champions.html">Championship</a>
         <a href="Hall of Famers/HOF.html">Retired Jersey</a>
@@ -19,32 +18,12 @@
    </div>
 
    <div style="text-align: center;z-index:10;">
-   <video width="80%" height="89%" controls="controls" autoplay="autoplay">
+   <video width="80%" height="89%" controls="controls">
         <source src="media/movie.mp4" type="video/mp4">
    </video>
    </div> 
 
-   <div class="sideLeft" style="z-index: -10;">
-      <img src="media/AD.jpg" >
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <img src="media/kobe1.jpg">
-   </div>
-
-   <div class="sideRight" style="z-index: -10;">
-      <img src="media/lbj.jpg" >
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <img src="media/kobe2.jpg" >
-   </div>
+ 
 
    <div style="text-align:center">
      <img src="media/3.jpg" width="80%">
