--- a/week07/Lakers/Champions/champions.html
+++ b/week07/Lakers/Champions/champions.html
@@ -1,4 +1,4 @@
-<html style="background:grey">
+<html style="background:grey" class="mouse">
     <head>
         <title>Championship</title>
         <link rel="stylesheet" type="text/css" href="../style.css">
