--- a/week07/Lakers/Store/store.html
+++ b/week07/Lakers/Store/store.html
@@ -17,7 +17,7 @@
         <br>
         <br>
         <br>
-        <a href="https://www.adidas.com"><img src="media/addidas.jpg" ></a>
+        <a href="https://adidas.com"><img src="media/addidas.jpg" ></a>
         <br>
         <br>
         <br>
