--- a/final/graphics.html
+++ b/final/graphics.html
@@ -50,7 +50,7 @@
               <h5 class="card-title">Continuity Exercise</h5>
               <p class="card-text">Group designed a short scenario, create storyboards, and shoot their
                 film ‘in-camera’. Shots will be cut by turning the camera on and off, and we were not able to edit in post-production.</p>
-              <a onclick="openWin('cont.html','Image Series','1440px','810px')" class="btn btn-primary">Play Video</a>
+              <a onclick="openWin('cont.html','Continuity','1440px','810px')" class="btn btn-primary">Play Video</a>
             </div>
           </div>
           
@@ -65,7 +65,7 @@
                 between image and sound. The meaning of this project was
                 conveyed purely through image and sound, no explanatory voice over or
                 dialogue. </p>
-                <a onclick="openWin('soundvision.html','Image Series','1440px','810px')" class="btn btn-primary">Play Video</a>
+                <a onclick="openWin('soundvision.html','Vision and Sound','1440px','810px')" class="btn btn-primary">Play Video</a>
             </div>
           </div>
           <div class="card">
@@ -76,7 +76,7 @@
                 was a combination of moving and still images, sound, and titles.
                 Specific focus was on working within the style of the chosen genre, skills in
                 shooting and editing, and conveying a compelling idea through time.</p>
-                <a onclick="openWin('final.html','Image Series','1440px','810px')" class="btn btn-primary">Play Video</a>
+                <a onclick="openWin('final.html','Final Video','1440px','810px')" class="btn btn-primary">Play Video</a>
             </div>
           </div>
           
