--- a/final/final.html
+++ b/final/final.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%">
     <head>
         <title>Final Portfolio</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
-        <video width="100%"  controls="controls">
-            <source src="img/final/30%.mp4" type="video/mp4">
-        </video>
+    <body style="height:100%">
+        <iframe src="https://www.youtube.com/embed/ACFu6yflFBw"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen  style="height:100%;width:100%"></iframe>
 
     <script src="functions.js" type="text/javascript" charset="utf-8"></script>      
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
