--- a/final/graphics.html
+++ b/final/graphics.html
@@ -34,14 +34,14 @@
       </nav>
         <div id="images">
           <div class="card">
-            <img src="img/images/8.jpg" class="card-img-top" alt="...">
+            <img src="img/Graphics/1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Image Series</h5>
+              <h5 class="card-title">Screem Menu</h5>
               <p class="card-text">Exploring sequencing and how meaning
                 can be built up through connecting images. Expand the ‘story’
                 in a narrative that progresses through time. Explore the
                 question of “what’s next?” or “what just happened?”  </p>
-              <a onclick="openWin('image series.html','Image Series','1200px','800px' )" class="btn btn-primary">More</a>
+              <a href="img/Menu Prototype.pdf" download="screen menu.pdf" class="btn btn-primary">Download PDF</a>
             </div>
           </div>
           <div class="card">
