--- a/final/index.html
+++ b/final/index.html
@@ -32,9 +32,9 @@
               </ul>
             </div>
           </nav>
-
+        
           <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
-            <ol class="carousel-indicators">
+            <ol id="indicators" class="carousel-indicators">
               <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
               <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
@@ -56,14 +56,14 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <a href="web.html"><img src="../week07/Screenshot.png" class="d-block w-100" alt="..." ></a>
+                <a href="web.html"><img src="img/7.png" class="d-block w-100" alt="..." ></a>
                 <div id="caption" class="carousel-caption d-none d-md-block">
                   <h5>Intro to Web Development</h5>
                   <p>Webpages made in HTML5, CSS and Javascript</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <a href="graphics.html"><img src="img/1.png" class="d-block w-100" alt="..." ></a>
+                <a href="graphics.html"><img src="img/small logo.jpg" class="d-block w-100" alt="..." ></a>
                 <div id="caption" class="carousel-caption d-none d-md-block">
                   <h5>Graphical Design</h5>
                   <p>Logos and menus made in Adobe Indesign/Illustrator/Figma</p>
@@ -74,7 +74,7 @@
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <a id="arrows" class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
