--- a/final/graphics.html
+++ b/final/graphics.html
@@ -36,21 +36,20 @@
           <div class="card">
             <img src="img/Graphics/1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Screem Menu</h5>
-              <p class="card-text">Exploring sequencing and how meaning
-                can be built up through connecting images. Expand the ‘story’
-                in a narrative that progresses through time. Explore the
-                question of “what’s next?” or “what just happened?”  </p>
+              <h5 class="card-title">Screen Menu</h5>
+              <p class="card-text">Using Figma, design a restaurant menu for digital formats.
+                Through this project work with and learn about hierarchy, grids, type styles, and compositional strategies </p>
               <a href="img/Menu Prototype.pdf" download="screen menu.pdf" class="btn btn-primary">Download PDF</a>
             </div>
           </div>
+
           <div class="card">
-            <img src="img/cont/1.png" class="card-img-top" alt="...">
+            <img src="img/Graphics/menu.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Continuity Exercise</h5>
-              <p class="card-text">Group designed a short scenario, create storyboards, and shoot their
-                film ‘in-camera’. Shots will be cut by turning the camera on and off, and we were not able to edit in post-production.</p>
-              <a onclick="openWin('cont.html','Continuity','1440px','810px')" class="btn btn-primary">Play Video</a>
+              <h5 class="card-title">Print Menu</h5>
+              <p class="card-text">Using Adobe InDeisgn, design a restaurant menu for print formats.
+                Through this project work with and learn about hierarchy, grids, type styles, and compositional strategies</p>
+                <a href="img/print menu.pdf" download="print menu.pdf" class="btn btn-primary">Download PDF</a>
             </div>
           </div>
           
@@ -58,25 +57,21 @@
 
         <div id="images">
           <div class="card">
-            <img src="img/soundvision/1.png" class="card-img-top" alt="...">
+            <img src="img/logo.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Sound and Vision</h5>
-              <p class="card-text">This video assignment explores pure editing as well as the connection
-                between image and sound. The meaning of this project was
-                conveyed purely through image and sound, no explanatory voice over or
-                dialogue. </p>
-                <a onclick="openWin('soundvision.html','Vision and Sound','1440px','810px')" class="btn btn-primary">Play Video</a>
+              <h5 class="card-title">Logo Design</h5>
+              <p class="card-text">The iterative process in order to gain facility with creating and manipulating vector graphics to communicate an identity, character, and/or idea. </p>
+                <a href="img/logo draft 2.pdf" download="logos.pdf" class="btn btn-primary">Download PDF</a>
             </div>
           </div>
+
           <div class="card">
-            <img src="img/final/1.png" class="card-img-top" alt="...">
+            <img src="img/6.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Final Video</h5>
-              <p class="card-text">Regardless of genre, each project
-                was a combination of moving and still images, sound, and titles.
-                Specific focus was on working within the style of the chosen genre, skills in
-                shooting and editing, and conveying a compelling idea through time.</p>
-                <a onclick="openWin('final.html','Final Video','1440px','810px')" class="btn btn-primary">Play Video</a>
+              <h5 class="card-title">Final Portfolio (In Progress)</h5>
+              <p class="card-text">This is compiled using Adobe InDesign. The visual foundation principles I been learning all semester are present.
+              </p>
+              <a class="btn btn-primary">Unavailable</a>
             </div>
           </div>
           
